# zclaw

./: .gitignore  README.md  pyproject.toml
notebook/: chat_code.ipynb
scripts/: run_tool_agent_test.py
src/zclaw/: __init__.py  __main__.py  append_guard.py  llm.py  path_intent.py  path_resolve.py  prompts.py  tool_loop.py  tools.py  workspace.py
src/zclaw.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: run_unit_tests.py  test_append_guard.py  test_path_intent.py  test_path_resolve.py  test_tool_loop.py  test_tools.py
